// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`section resources createSection should resolve with a new Section on success 1`] = `
{
  "created_datetime": "2020-10-14T14:26:35.921523+00:00",
  "decoration": null,
  "id": 1,
  "name": "foo",
  "private": false,
  "updated_datetime": "2020-10-14T14:26:35.921523+00:00",
  "uri": "foo",
}
`;

exports[`section resources createSection should resolve with a new Section on success 2`] = `
{
  "delete": [],
  "get": [],
  "head": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [
    {
      "data": "{"name":"foo","private":false,"decoration":null}",
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json;charset=utf-8",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "post",
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "url": "/api/view-sections/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "put": [],
}
`;

exports[`section resources deleteSection should resolve on success 1`] = `undefined`;

exports[`section resources fetchSections should resolve with a Section list on success 1`] = `
{
  "data": [
    {
      "created_datetime": "2020-10-14T14:26:35.921523+00:00",
      "decoration": null,
      "id": 1,
      "name": "foo",
      "private": false,
      "updated_datetime": "2020-10-14T14:26:35.921523+00:00",
      "uri": "foo",
    },
    {
      "created_datetime": "2020-10-14T14:26:35.921523+00:00",
      "decoration": null,
      "id": 1,
      "name": "foo",
      "private": false,
      "updated_datetime": "2020-10-14T14:26:35.921523+00:00",
      "uri": "foo",
    },
    {
      "created_datetime": "2020-10-14T14:26:35.921523+00:00",
      "decoration": null,
      "id": 1,
      "name": "foo",
      "private": false,
      "updated_datetime": "2020-10-14T14:26:35.921523+00:00",
      "uri": "foo",
    },
  ],
}
`;

exports[`section resources updateSection should resolve with an updated Section on success 1`] = `
{
  "created_datetime": "2020-10-14T14:26:35.921523+00:00",
  "decoration": null,
  "id": 1,
  "name": "foo",
  "private": false,
  "updated_datetime": "2020-10-14T14:26:35.921523+00:00",
  "uri": "foo",
}
`;

exports[`section resources updateSection should resolve with an updated Section on success 2`] = `
{
  "delete": [],
  "get": [],
  "head": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [
    {
      "data": "{"decoration":null,"name":"foo"}",
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json;charset=utf-8",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "put",
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "url": "/api/view-sections/1/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
}
`;
